@@ -48,9 +48,10 @@ def locations(self):
 	
 	if os.name == 'nt' or os.name == 'win32':
 		import winshell
+		from win32com.shell import shellcon, shell
+		import shutil
+		
 		mydocs = winshell.my_documents()
-		locations['home']           = os.path.join(mydocs, 'griffith').decode(defaultEnc)
-		#locations['home']           = os.path.join(os.path.expanduser('~'), 'griffith')
 		locations['movie_plugins']  = "%s\\lib\\plugins\\movie" % locations['exec']
 		locations['export_plugins'] = "%s\\lib\\plugins\\export" % locations['exec']
 		locations['images']         = "%s\\images" % locations['exec']
@@ -59,6 +60,12 @@ def locations(self):
 		locations['desktop']        = ''
 		locations['i18n']           = "%s\\i18n" % locations['exec']
 		os.environ['PATH'] += ";lib;"
+		
+		# griffith dir location should point to 'Application Data'
+		# this is changed on 0.9.5+svn so we need to make it backward compatible
+		if os.path.exists(os.path.join(mydocs, 'griffith').decode(defaultEnc)):
+			shutil.move(os.path.join(mydocs, 'griffith').decode(defaultEnc),os.path.join(shell.SHGetFolderPath(0, shellcon.CSIDL_APPDATA, 0, 0), 'griffith').decode(defaultEnc))
+		locations['home']           = os.path.join(shell.SHGetFolderPath(0, shellcon.CSIDL_APPDATA, 0, 0), 'griffith').decode(defaultEnc)
 		
 		# windows hack for locale setting
 		lang = os.getenv('LANG')
